--- a/Copy_of_Copy_of_Customer_Churn_Prediction.ipynb
+++ b/Copy_of_Copy_of_Customer_Churn_Prediction.ipynb
@@ -93,7 +93,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 85,
       "metadata": {
         "id": "0bb3a669"
       },
@@ -102,9 +102,24 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import seaborn as sns\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "import warnings"
       ],
       "id": "0bb3a669"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Disable pandas warnings\n",
+        "warnings.filterwarnings(\"ignore\", category=FutureWarning)\n",
+        "warnings.filterwarnings(\"ignore\", category=DeprecationWarning)\n"
+      ],
+      "metadata": {
+        "id": "0RLdpiaesFZA"
+      },
+      "id": "0RLdpiaesFZA",
+      "execution_count": 86,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
