--- a/Copy_of_Copy_of_Customer_Churn_Prediction.ipynb
+++ b/Copy_of_Copy_of_Customer_Churn_Prediction.ipynb
@@ -10630,11 +10630,11 @@
         "print(\"AUC:\", auc)\n"
       ],
       "metadata": {
-        "id": "9jdzW4bH_kMK",
-        "outputId": "3fe5cfea-ec51-4b4c-8419-e4c72f8ed56e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9jdzW4bH_kMK",
+        "outputId": "3fe5cfea-ec51-4b4c-8419-e4c72f8ed56e"
       },
       "id": "9jdzW4bH_kMK",
       "execution_count": 104,
@@ -10721,12 +10721,12 @@
         "KNN_model.fit(X_train_selected, y_train_resampled)\n"
       ],
       "metadata": {
-        "id": "Y-M8O1y5qDbH",
-        "outputId": "580a92da-04a9-4bcc-efd6-526f4a5fb8ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
-        }
+        },
+        "id": "Y-M8O1y5qDbH",
+        "outputId": "580a92da-04a9-4bcc-efd6-526f4a5fb8ea"
       },
       "id": "Y-M8O1y5qDbH",
       "execution_count": 108,
@@ -10766,11 +10766,11 @@
         "print(classification_report(y_eval, y_knn_pred))"
       ],
       "metadata": {
-        "id": "5OXytdpIyvUD",
-        "outputId": "6ebfbe87-7245-4ea8-b4e0-f7c1d42dd393",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5OXytdpIyvUD",
+        "outputId": "6ebfbe87-7245-4ea8-b4e0-f7c1d42dd393"
       },
       "id": "5OXytdpIyvUD",
       "execution_count": 110,
@@ -10812,11 +10812,11 @@
         "print(classification_report(y_eval, y_knn_pred))"
       ],
       "metadata": {
-        "id": "8jP9Cs78zaCL",
-        "outputId": "4261998d-4e6e-4530-b972-8ba03e4c4017",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "8jP9Cs78zaCL",
+        "outputId": "4261998d-4e6e-4530-b972-8ba03e4c4017"
       },
       "id": "8jP9Cs78zaCL",
       "execution_count": 112,
@@ -10847,11 +10847,11 @@
         "print(\"AUC:\", auc)"
       ],
       "metadata": {
-        "id": "cw9W6qiUBFqD",
-        "outputId": "36723721-77a4-4550-d436-8d8423f85f8e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cw9W6qiUBFqD",
+        "outputId": "36723721-77a4-4550-d436-8d8423f85f8e"
       },
       "id": "cw9W6qiUBFqD",
       "execution_count": 113,
@@ -10885,12 +10885,12 @@
         "rf_model.fit(X_train_selected, y_train_resampled)\n"
       ],
       "metadata": {
-        "id": "V0sxzrwDzq5J",
-        "outputId": "46a7751a-2772-4f43-b1aa-9780d760ace3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 74
-        }
+        },
+        "id": "V0sxzrwDzq5J",
+        "outputId": "46a7751a-2772-4f43-b1aa-9780d760ace3"
       },
       "id": "V0sxzrwDzq5J",
       "execution_count": 114,
@@ -10930,11 +10930,11 @@
         "print(classification_report(y_eval, y_rf_pred))"
       ],
       "metadata": {
-        "id": "kNQP_Iog5xyb",
-        "outputId": "f0c3204b-7673-4181-8506-bd0535cdc586",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kNQP_Iog5xyb",
+        "outputId": "f0c3204b-7673-4181-8506-bd0535cdc586"
       },
       "id": "kNQP_Iog5xyb",
       "execution_count": 116,
@@ -10965,11 +10965,11 @@
         "print(\"AUC:\", auc)"
       ],
       "metadata": {
-        "id": "ppPzUgLkCIKm",
-        "outputId": "7155e248-b94c-4fb5-8cda-52da03527bcd",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ppPzUgLkCIKm",
+        "outputId": "7155e248-b94c-4fb5-8cda-52da03527bcd"
       },
       "id": "ppPzUgLkCIKm",
       "execution_count": 117,
@@ -11002,11 +11002,11 @@
         "y_rf_test_pred"
       ],
       "metadata": {
-        "id": "D74s6NdM67Qm",
-        "outputId": "09071917-da1f-4a3f-9069-2002d0438443",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "D74s6NdM67Qm",
+        "outputId": "09071917-da1f-4a3f-9069-2002d0438443"
       },
       "id": "D74s6NdM67Qm",
       "execution_count": 119,
@@ -11247,12 +11247,12 @@
         "metrics_df"
       ],
       "metadata": {
-        "id": "6t8U_pEH-E5Y",
-        "outputId": "545928f8-6b09-40be-8eaa-7384b38a77e8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        }
+        },
+        "id": "6t8U_pEH-E5Y",
+        "outputId": "545928f8-6b09-40be-8eaa-7384b38a77e8"
       },
       "id": "6t8U_pEH-E5Y",
       "execution_count": 130,
@@ -11436,12 +11436,12 @@
         "auc_metrics_df"
       ],
       "metadata": {
-        "id": "W3jJCQjNSc1R",
-        "outputId": "d8a70aa6-8926-4609-bb59-5b2abdd82995",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 175
-        }
+        },
+        "id": "W3jJCQjNSc1R",
+        "outputId": "d8a70aa6-8926-4609-bb59-5b2abdd82995"
       },
       "id": "W3jJCQjNSc1R",
       "execution_count": 151,
@@ -11603,6 +11603,28 @@
         "id": "AkVI6J4BSvm2"
       },
       "id": "AkVI6J4BSvm2"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Hyper Parameter Tuning.\n",
+        "\n",
+        "Fine-tuning the best performing model using a GridSearchCV (that is in sklearn.model_selection ) to find the best hyperparameters and achieve the maximum performance of each of the model, then comparing them again to select the best one."
+      ],
+      "metadata": {
+        "id": "JXsIdJkMTTDZ"
+      },
+      "id": "JXsIdJkMTTDZ"
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "RSqe6IuNTWqi"
+      },
+      "id": "RSqe6IuNTWqi",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
